--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mld",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mld.ng/",
+  "homepage": "https://github.com/GUNA9894643135/Kairaa_React_App.git/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^6.1.1",
     "notiflix": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
